--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/home.css">
-    <title>Hello, world!</title>
+    <title>Project</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Montserrat:wght@100&display=swap"
         rel="stylesheet">
@@ -20,7 +20,7 @@
     <!-- ///////////////////////////////NAV BAR//////////////////////////////////////////// -->
     <div class="bg-image d-flex "><img src="/images/bg2.png" class="  img-fluid "></div>
 
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand " href="#">Project</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,15 +46,16 @@
         </div>
     </nav>
     <!-- ////////////////////////////////////////////////// HEADING ////////////////////////////////// -->
-    <h1 class="text-center ">Projects</h1>
+    <h1 class="text-center main-title">Projects</h1>
     <!-- /////////////////////////////// CONTAINER FOR PREVIEW AND PROJECT-LIST ////////////////////////////////// -->
 
     <div class="container">
 
         <div class="row">
             <!-- /PREVIEW-IMAGE/ -->
-            <div class="col-lg-5 col-sm-12 text-center ">
-                <img src="/images/project.png" class="toggleImg img-fluid img-thumbnail preview">
+            <div class="col-lg-5 col-sm-12 text-center  ">
+                <img src="/images/project.png" class="toggleImg img-fluid img-thumbnail preview ">
+
             </div>
             <!-- /////////////////////////***************project-list/***********************////////////////////// -->
 
@@ -113,7 +114,7 @@
         </div>
         <div class="sMedia container">
             <div class="contact row  justify-content-center">contact us</div>
-            <div class="row justify-content-md-center ">
+            <div class="row justify-content-md-center justify-content-center">
                 <div class="bicons col-md-auto text-center ">
                     <a href="https://www.instagram.com/"><i class="sm fab fa-instagram"></i></a>
                 </div>
@@ -133,6 +134,7 @@
                 </div>
             </div>
         </div>
+        <!-- /////////////////////////////////footer////////////////////////////// -->
         <footer>
             <p class="text-center">Copyright &copy; 2021 project</p>
         </footer>
@@ -142,6 +144,7 @@
             crossorigin="anonymous"></script>
         <script src="/js/home.js"></script>
         <script src="https://kit.fontawesome.com/ff2686f8f1.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
